# buildproject53

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
c_code/: .cproject  .mxproject  .project  test15.ioc  test15.launch
c_code/Core/Inc/: adc.h  gpio.h  mainc.h  usart.h
c_code/Core/Src/: adc.c  gpio.c  mainc.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
c_code/Core/Startup/: startup_stm32g431cbux.s
c_code/Debug/: makefile  objects.list  sources.mk  test15.elf  test15.list  test15.map
c_code/Debug/Core/Src/: adc.d  gpio.d  mainc.cyclo  mainc.d  mainc.su  stm32g4xx_hal_msp.d  stm32g4xx_it.d  subdir.mk  usart.d
c_code/Debug/Core/Startup/: subdir.mk
c_code/Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
c_code/Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
src/: main.rs
